--- a/TrabalhoBanco/WebContent/ComprovanteDeposito.xhtml
+++ b/TrabalhoBanco/WebContent/ComprovanteDeposito.xhtml
@@ -56,7 +56,7 @@
 		<h2>Sistema de infomaçoes EvilMoney </h2>
 		<br/>
 		<br/>
-		<h3>Comprovante de pagamento</h3>
+		<h3>Comprovante de pagamentoa</h3>
 		<br>
 		<br/>
 			<b:icon name="glyphicon-user"/> 
