--- a/TrabalhoBanco/WebContent/Administrador.xhtml
+++ b/TrabalhoBanco/WebContent/Administrador.xhtml
@@ -78,6 +78,7 @@
 		</p:submenu>
 		<p:submenu label="Inserir Dados">
 		<p:menuitem value="Conta" url="InserirConta.xhtml"></p:menuitem>
+		<p:menuitem value="Cartao" url="InserirCartao.xhtml"></p:menuitem>
 		</p:submenu>
 		<p:submenu label="Buscar">
 		<p:menuitem value="Cliente" url="BuscarCliente.xhtml"></p:menuitem>
