--- a/TrabalhoBanco/WebContent/CriarCartao.xhtml
+++ b/TrabalhoBanco/WebContent/CriarCartao.xhtml
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" type="text/css" href="bootstrap.css"/>
 		<script type="text/javascript" src="jquery-3.1.1.min.js"></script>
 		<script type="text/javascript" src="Script.js"></script>
-		<title>Listar Cartões</title>
+		<title>Criar Cartão</title>
 	</h:head>
 <body>
 <nav class="navbar navbar-default">
@@ -50,29 +50,19 @@
   </div>
 </nav>
 	<h:form acceptcharset="ISO-8859-1" id="Cartao">
-	<p:dataTable  value="#{mCartaoBean.cartoes}" var="cadastroCartao">
-	<p:column><f:facet name="header">Nome do Cliente</f:facet>
-	<h:outputText value="#{cadastroCartao.cadastro.nome}"></h:outputText>
-	</p:column>
-	<p:column><f:facet name="header">Renda</f:facet>
-	<h:outputText value="#{cadastroCartao.renda}"></h:outputText>
-	</p:column>
-	<p:column><f:facet name="header">Tipo cartão</f:facet>
-	<h:outputText value="#{cadastroCartao.tipoCartao}"></h:outputText>
-	</p:column>
-	<p:column><f:facet name="header">Cartão</f:facet>
-	<h:outputText value="#{cadastroCartao.cartao}"></h:outputText>
-	</p:column>
-	<p:column><f:facet name="header">Alterar</f:facet>
-	<p:commandLink  value="Alterar" action="#{mCartaoBean.enviarDadosParaAlterar(cadastroCartao)}"></p:commandLink>
-	</p:column>
-	<p:column><f:facet name="header">Remover</f:facet>
-	<p:commandLink  value="Remover" action="#{mCartaoBean.removerCartao(cadastroCartao)}"></p:commandLink>
-	</p:column>
-	<p:column><f:facet name="header">Retornar</f:facet>
-	<p:commandLink  value="Retornar" action="Administrador.xhtml?faces-redirect=true"></p:commandLink>
-	</p:column>
-	</p:dataTable>
+	<h:panelGrid columns="1">
+	<h:inputHidden value="#{mCadastroBean.cadastro.idCad}"></h:inputHidden>
+	<br/>
+	<br/>
+	<p:outputLabel value="Cartao: "></p:outputLabel>
+	<p:inputText pt:placeholder="Digite o cartao" value="#{mCadastroBean.cadastro.cartao}"></p:inputText>
+	<br/>
+	<br/>
+	<p:commandButton value="Alterar" action="#{mCadastroBean.alterarCartao(mCadastroBean.cadastro)}"></p:commandButton>
+	<br/>
+	<br/>
+	<p:commandButton value="Retornar" action="InserirCartao.xhtml?faces-redirect=true"></p:commandButton>
+	</h:panelGrid>
 	</h:form>
 </body>
 </html>
