--- a/TrabalhoBanco/WebContent/ComprovanteEmp.xhtml
+++ b/TrabalhoBanco/WebContent/ComprovanteEmp.xhtml
@@ -55,7 +55,7 @@
 	<h:outputText value="#{cadastroEmprestimo.cadastro.nome}"></h:outputText>
 	</p:column>
 	<p:column><f:facet name="header">Saldo Emprestado</f:facet>
-	<h:outputText value="#{cadastroEmprestimo.saldoE}"></h:outputText>
+	<h:outputText value="R$#{cadastroEmprestimo.saldoE}"></h:outputText>
 	</p:column>
 	<p:column><f:facet name="header">Motivo</f:facet>
 	<h:outputText value="#{cadastroEmprestimo.motivo}"></h:outputText>
