--- a/TrabalhoBanco/WebContent/Transferencia.xhtml
+++ b/TrabalhoBanco/WebContent/Transferencia.xhtml
@@ -51,10 +51,19 @@
 	<h:form acceptcharset="ISO-8859-1">
 		<fieldset>
 			<h1>Transferência </h1>
-			<b:icon name="glyphicon-user"/> 
 			<h:inputHidden value="#{mCadastroBean.cadastro.idCad}"></h:inputHidden>
 			<p:outputLabel value="Nome: "></p:outputLabel>
 			<p:outputLabel value="#{mCadastroBean.cadastro.nome}"></p:outputLabel>
+			<br/>
+			<br/>
+			<b:icon name="glyphicon-user"/> 
+			<p:outputLabel value="Agencia: "></p:outputLabel>
+			<p:outputLabel value="#{mCadastroBean.cadastro.agencia.agencia}"></p:outputLabel>
+			<br/>
+			<br/>
+			<b:icon name="glyphicon-user"/> 
+			<p:outputLabel value="Conta: "></p:outputLabel>
+			<p:outputLabel value="#{mCadastroBean.cadastro.conta}"></p:outputLabel>
 			<br/>
 			<br/>
 			<b:icon name="glyphicon-user"/> 
@@ -62,33 +71,18 @@
 			<p:outputLabel value="R$#{mCadastroBean.cadastro.saldo}"></p:outputLabel>
 			<br/>
 			<br/>
-			<h:selectOneMenu value="#{mEmprestimoBean.idCad}">
-			<f:selectItem itemLabel="Selecione o cadastro" itemValue="0"></f:selectItem>
+			<h:selectOneMenu value="#{mTransferenciaBean.idCad}">
+			<f:selectItem itemLabel="Selecione o cliente para transferir" itemValue="0"></f:selectItem>
 			<f:selectItems value="#{mCadastroBean.cadastros}" var="cadastro" itemLabel="#{cadastro.nome}" itemValue="#{cadastro.idCad}"></f:selectItems>
 			</h:selectOneMenu>
-			<br/>
-			<br/>
-			<b:icon name="glyphicon-user"/> 
-			<h:outputText value=" Agência do outro cliente: "/>
-			<p:inputText id="Agencia" pt:placeholder="Digite a agencia" value="#{mAgenciaBean.agencia.agencia}"></p:inputText>
-			<br/> 
-			<br/> 
-			<b:icon name="glyphicon-user"/> 
-			<h:outputText value=" Número da conta do outro cliente: "/>
-			<p:inputText id="nconta" pt:placeholder="Digite o numero da conta" value="#{mContaBean.conta.conta}"></p:inputText>
 			<br/> 
 			<br/> 
 			<b:icon name="glyphicon-user"/> 
 			<h:outputText value="Valor a ser transferido: "/>
-			<p:inputText id="vtrans" pt:placeholder="Digite o valor"></p:inputText>
-			<br/> 
-			<br/> 
-			<b:icon name="glyphicon-user"/> 
-			<h:outputText value=" Data de Transferência: "/>
-			<p:inputText id="datatrans" pt:placeholder="Data de transferência"></p:inputText><br/> 
+			<p:inputText id="vtrans" pt:placeholder="Digite o valor" value="#{mTransferenciaBean.transferencia.quantidade}"></p:inputText>
 			<br/>
 			<br/>
-			<h:commandButton value="Efetuar transferencia" action="#{mCadastroBean.gravarCadastro(mCadastroBean.cadastro)}"></h:commandButton>
+			<h:commandButton value="Transferir" action="#{mTransferenciaBean.gravarTransferencia(mTransferenciaBean.transferencia)}"></h:commandButton>
 			<br/>
 			<br/>
 			<h:commandButton value="Retornar" action="AreaCliente.xhtml?faces-redirect=true"></h:commandButton>
