--- a/TrabalhoBanco/WebContent/ComprovanteDep.xhtml
+++ b/TrabalhoBanco/WebContent/ComprovanteDep.xhtml
@@ -54,7 +54,7 @@
 	<h:outputText value="#{cadastroDeposito.cadastro.nome}"></h:outputText>
 	</p:column>
 	<p:column><f:facet name="header">Depósitado</f:facet>
-	<h:outputText value="#{cadastroDeposito.quantidade}"></h:outputText>
+	<h:outputText value="R$#{cadastroDeposito.quantidade}"></h:outputText>
 	</p:column>
 	<p:column><f:facet name="header">Agência</f:facet>
 	<h:outputText value="#{cadastroDeposito.cadastro.agencia.agencia}"></h:outputText>
