--- a/TrabalhoBanco/WebContent/ComprovanteTra.xhtml
+++ b/TrabalhoBanco/WebContent/ComprovanteTra.xhtml
@@ -48,36 +48,24 @@
   </div>
 </nav>
 <h:body>
-	<h:form acceptcharset="ISO-8859-1">
-		<fieldset>
-		<h1>Sistema de infomaçoes EvilMoney </h1>
-		<br/>
-		<br/>
-		<h2>Comprovante de pagamentoa</h2>
-		<br>
-		<br/>
-			<b:icon name="glyphicon-user"/> 
-			<h:inputHidden value="#{mAgenciaBean.agencia.idAgen}"></h:inputHidden>
-		<p:outputLabel style="font-size: 25px;" value="Agencia: "></p:outputLabel>
-		<p:outputLabel style="font-size: 20px;" value="#{mAgenciaBean.agencia.agencia}"></p:outputLabel>
-		<br/><br/> 
-			<br/> 
-			<b:icon name="glyphicon-user"/> 
-			<h:inputHidden value="#{mContaBean.conta.idConta}"></h:inputHidden>
-		<p:outputLabel style="font-size: 25px;" value="Conta origen: "></p:outputLabel>
-		<p:outputLabel style="font-size: 20px;" value="#{mContaBean.conta.conta}"></p:outputLabel>
-		<br/><br/> 
-			<br/> 
-			<h:inputHidden value="#{mAgenciaBean.agencia.idConta}"></h:inputHidden>
-		<p:outputLabel style="font-size: 25px;" value="Conta destino: "></p:outputLabel>
-		<p:outputLabel style="font-size: 20px;" value="#{mContaBean.conta.conta}"></p:outputLabel>
-		<br/><br/> 
-		<h:inputHidden value=""></h:inputHidden>
-		<p:outputLabel style="font-size: 25px;" value="Valor tranferido: "></p:outputLabel>
-		<p:outputLabel style="font-size: 20px;" value=""></p:outputLabel>
-		<br/><br/> 
-			</fieldset>
-			</h:form>
-			</h:body>
-			</html>
-			
+	<h:form acceptcharset="ISO-8859-1" id="Transferencia">
+	<p:dataTable  value="#{mTransferenciaBean.transferencias}" var="cadastroTransferencia" >
+	<p:column><f:facet name="header">Nome do cliente do Comprovante</f:facet>
+	<h:outputText value="#{cadastroTransferencia.cadastro.nome}"></h:outputText>
+	</p:column>
+	<p:column><f:facet name="header">Trânsferido</f:facet>
+	<h:outputText value="R$#{cadastroTransferencia.quantidade}"></h:outputText>
+	</p:column>
+	<p:column><f:facet name="header">Agência</f:facet>
+	<h:outputText value="#{cadastroTransferencia.cadastro.agencia.agencia}"></h:outputText>
+	</p:column>
+	<p:column><f:facet name="header">Conta</f:facet>
+	<h:outputText value="#{cadastroTransferencia.cadastro.conta}"></h:outputText>
+	</p:column>
+	<p:column><f:facet name="header">Retornar</f:facet>
+	<p:commandButton value="Retornar" action="Comprovante.xhtml?faces-redirect=true"></p:commandButton>
+	</p:column>
+	</p:dataTable>
+	</h:form>
+</h:body>
+</html>
