--- a/TrabalhoBanco/WebContent/Pagamento.xhtml
+++ b/TrabalhoBanco/WebContent/Pagamento.xhtml
@@ -50,7 +50,7 @@
 </nav>
 <h:form acceptcharset="ISO-8859-1">
 <fieldset>
-	<h1>Efetuar pagamentos</h1>
+	<h1>Efetuar Pagamentos</h1>
 			<h:inputHidden value="#{mCadastroBean.cadastro.idCad}"></h:inputHidden>
 			<p:outputLabel value="Nome: "></p:outputLabel>
 			<p:outputLabel value="#{mCadastroBean.cadastro.nome}"></p:outputLabel>
