index se tiver errado da uma olhada

--- a/TrabalhoBanco/WebContent/Index.xhtml
+++ b/TrabalhoBanco/WebContent/Index.xhtml
@@ -46,6 +46,19 @@
       </ul>
     </div>
   </div>
-</nav>
-</body>
+  </nav>
+  
+<h:form acceptcharset="ISO-8859-1">
+
+<body background="dinheiro1.jpg">
+
+
+
+<h1>Apresentação</h1>
+<br/>
+<h2><p>O EvilMoney é o maior banco privado do Mundo,lhes da boas vindas espero que o senhor(a) aproveite os nossos serviços e se nao gostar do banco apenas escolha outro</p></h2>
+  <br/>
+  </body>
+</h:form>
+</h:body>
 </html>
