--- a/TrabalhoBanco/WebContent/Index.xhtml
+++ b/TrabalhoBanco/WebContent/Index.xhtml
@@ -42,7 +42,7 @@
         <button type="submit" class="btn btn-default">Buscar</button>
               </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="Login.xhtml">Login</a></li>
+        <li><a href="Login.xhtml">Loginn</a></li>
       </ul>
     </div>
   </div>
