--- a/TrabalhoBanco/WebContent/Index.xhtml
+++ b/TrabalhoBanco/WebContent/Index.xhtml
@@ -12,7 +12,16 @@
 		<script type="text/javascript" src="Script.js"></script>
 		<title>Banco EvilMoney</title>
 	</h:head>
-<body>
+	<style>
+	body{
+	background-image: url(https://images.pond5.com/hypnotic-money-flash-two-looping-footage-000774003_prevstill.jpeg); 
+	width:auto; 
+	height:auto;
+	background-repeat: no-repeat; 
+	}
+	</style>
+	
+<h:body>
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -49,16 +58,10 @@
   </nav>
   
 <h:form acceptcharset="ISO-8859-1">
-
-<body background="dinheiro1.jpg">
-
-
-
-<h1>Apresentação</h1>
+<h1 style="color: white">Apresentação</h1>
 <br/>
-<h2><p>O EvilMoney é o maior banco privado do Mundo,lhes da boas vindas espero que o senhor(a) aproveite os nossos serviços e se nao gostar do banco apenas escolha outro</p></h2>
-  <br/>
-  </body>
+<h2 style="color: white"><p>O EvilMoney é o maior banco privado do Mundo,lhes da boas vindas espero que o senhor(a) aproveite os nossos serviços e se nao gostar do banco apenas escolha outro !!</p></h2>
+<br/>
 </h:form>
 </h:body>
 </html>
