--- a/TrabalhoBanco/WebContent/Ouvidoria.xhtml
+++ b/TrabalhoBanco/WebContent/Ouvidoria.xhtml
@@ -51,8 +51,8 @@
 <h:form acceptcharset="ISO-8859-1">
 		<fieldset>
 			<h1>Ouvidoria</h1>
-			<p>Se a sua reclamação foi tratada em nossos canais de atendimento, mas a resposta não atendeu sua expectativa, a Ouvidoria Itaú pode reavaliar seu pedido.
-Se preferir ligue para 0000 0000000, de segunda a sexta (dias úteis) das 9h às 18h</p>
+			<p>Se a sua reclamação foi tratada em nossos canais de atendimento, mas a resposta não atendeu sua expectativa, a Ouvidoria EvilMoney pode reavaliar seu pedido.
+Se preferir ligue para 2342 2413512, de segunda a sexta (dias úteis) das 9h às 18h</p>
 		</fieldset>
 	</h:form>
 </body>
