--- a/TrabalhoBanco/WebContent/Index.xhtml
+++ b/TrabalhoBanco/WebContent/Index.xhtml
@@ -51,14 +51,14 @@
         <button type="submit" class="btn btn-default">Buscar</button>
               </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="Login.xhtml">Loginn</a></li>
+        <li><a href="Login.xhtml">Login</a></li>
       </ul>
     </div>
   </div>
   </nav>
   
 <h:form acceptcharset="ISO-8859-1">
-<h1 style="color: white">Apresentação</h1>
+<h1 style="color: white">BANCO EVIL MONEY</h1>
 <br/>
 <h2 style="color: white"><p>O EvilMoney é o maior banco privado do Mundo,lhes da boas vindas espero que o senhor(a) aproveite os nossos serviços e se nao gostar do banco apenas escolha outro !!</p></h2>
 <br/>
