--- a/TrabalhoBanco/WebContent/ComprovanteDep.xhtml
+++ b/TrabalhoBanco/WebContent/ComprovanteDep.xhtml
@@ -62,6 +62,9 @@
 	<p:column><f:facet name="header">Conta</f:facet>
 	<h:outputText value="#{cadastroDeposito.cadastro.conta}"></h:outputText>
 	</p:column>
+	<p:column><f:facet name="header">Remover</f:facet>
+	<p:commandButton value="Remover" action="#{mDepositoBean.removerDeposito(cadastroDeposito)}"></p:commandButton>
+	</p:column>
 	<p:column><f:facet name="header">Retornar</f:facet>
 	<p:commandButton value="Retornar" action="Comprovante.xhtml?faces-redirect=true"></p:commandButton>
 	</p:column>
