--- a/TrabalhoBanco/WebContent/ComprovanteEmp.xhtml
+++ b/TrabalhoBanco/WebContent/ComprovanteEmp.xhtml
@@ -63,6 +63,9 @@
 	<p:column><f:facet name="header">Tempo de empréstimo</f:facet>
 	<h:outputText value="#{cadastroEmprestimo.data}"></h:outputText>
 	</p:column>
+	<p:column><f:facet name="header">Remover</f:facet>
+	<p:commandButton value="Remover" action="#{mEmprestimoBean.removerEmprestimo(cadastroEmprestimo)}"></p:commandButton>
+	</p:column>
 	<p:column><f:facet name="header">Retornar</f:facet>
 	<p:commandButton value="Retornar" action="Comprovante.xhtml?faces-redirect=true"></p:commandButton>
 	</p:column>
