--- a/TrabalhoBanco/WebContent/ListarSaldo.xhtml
+++ b/TrabalhoBanco/WebContent/ListarSaldo.xhtml
@@ -61,7 +61,7 @@
 	<p:commandLink  value="Alterar" action="#{mCadastroBean.enviarDadosParaAlterar2(cadastroCliente)}"></p:commandLink>
 	</p:column>
 	<p:column><f:facet name="header">Remover</f:facet>
-	<p:commandLink  value="Remover" action="#{mCadastroBean.removerCadastro(cadastroCliente)}"></p:commandLink>
+	<p:commandLink  value="Remover" action="#{mCadastroBean.removerCadastro2(cadastroCliente)}"></p:commandLink>
 	</p:column>
 	<p:column><f:facet name="header">Retornar</f:facet>
 	<p:commandLink value="Retornar" action="Administrador.xhtml?faces-redirect=true"></p:commandLink>
