--- a/TrabalhoBanco/WebContent/ComprovanteDep.xhtml
+++ b/TrabalhoBanco/WebContent/ComprovanteDep.xhtml
@@ -53,7 +53,7 @@
 	<p:column><f:facet name="header">Nome do cliente do Comprovante</f:facet>
 	<h:outputText value="#{cadastroDeposito.cadastro.nome}"></h:outputText>
 	</p:column>
-	<p:column><f:facet name="header">Depósitado</f:facet>
+	<p:column><f:facet name="header">Saldo Atual</f:facet>
 	<h:outputText value="R$#{cadastroDeposito.quantidade}"></h:outputText>
 	</p:column>
 	<p:column><f:facet name="header">Agência</f:facet>
