--- a/TrabalhoBanco/WebContent/Saldo.xhtml
+++ b/TrabalhoBanco/WebContent/Saldo.xhtml
@@ -56,7 +56,7 @@
 		<br/>
 		<br/>
 		<p:outputLabel style="font-size: 25px;" value="Saldo: "></p:outputLabel>
-		<p:outputLabel style="font-size: 20px;" value="R$#{mCadastroBean.cadastro.saldo}"></p:outputLabel>
+		<p:outputLabel style="font-size: 20px;" value="R$#{mDepositoBean.resultado}"></p:outputLabel>
 		<br/>
 		<p:column><f:facet name="header">Retornar</f:facet>
 		<p:commandButton value="Retornar" action="AreaCliente.xhtml?faces-redirect=true"></p:commandButton>
